--- a/BA-Cheeto.vcxproj
+++ b/BA-Cheeto.vcxproj
@@ -16,8 +16,12 @@
     <ClInclude Include="src\appdata\cs-types.h" />
     <ClInclude Include="src\appdata\types-helper.h" />
     <ClInclude Include="src\appdata\types.h" />
-    <ClInclude Include="src\core\config\config_field.h" />
     <ClInclude Include="src\core\config\config_manager.h" />
+    <ClInclude Include="src\core\config\config_object.h" />
+    <ClInclude Include="src\core\config\fields\field.h" />
+    <ClInclude Include="src\core\config\fields\field_base.h" />
+    <ClInclude Include="src\core\config\fields\field_registry.h" />
+    <ClInclude Include="src\core\config\fields\hotkey_field.h" />
     <ClInclude Include="src\core\events\event.h" />
     <ClInclude Include="src\core\events\event_manager.h" />
     <ClInclude Include="src\core\hotkey\hotkey_manager.h" />
@@ -26,6 +30,7 @@
     <ClInclude Include="src\core\rendering\backend\renderer_backend.h" />
     <ClInclude Include="src\core\rendering\fonts\NotoSans.hpp" />
     <ClInclude Include="src\core\rendering\renderer.h" />
+    <ClInclude Include="src\core\serializable.h" />
     <ClInclude Include="src\framework.h" />
     <ClInclude Include="src\memory\hook_manager.h" />
     <ClInclude Include="src\pch.h" />
@@ -142,6 +147,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="src\appdata\helpers.h" />
+    <Content Include="src\core\config\fields\hotkey_field.h" />
     <Content Include="src\user\cheat\feature_base.h" />
   </ItemGroup>
   <ItemGroup>
