--- a/BA-Cheeto.vcxproj.filters
+++ b/BA-Cheeto.vcxproj.filters
@@ -171,10 +171,22 @@
     <ClInclude Include="src\user\main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\core\config\config_field.h">
+    <ClInclude Include="src\core\config\fields\field.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\core\config\fields\field_base.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\core\config\fields\field_registry.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\core\config\fields\hotkey_field.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\core\config\config_manager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\core\config\config_object.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\core\events\event.h">
@@ -199,6 +211,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\core\rendering\renderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\core\serializable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
