--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "vendor/UnityResolve"]
 	path = vendor/UnityResolve
-	url = https://github.com/issuimo/UnityResolve.hpp
+	url = https://github.com/Taiga74164/UnityResolve.hpp
+	branch = main
 [submodule "vendor/imgui"]
 	path = vendor/imgui
 	url = https://github.com/ocornut/imgui
