--- a/BA-Cheeto.vcxproj
+++ b/BA-Cheeto.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\appdata\cs-types.h" />
     <ClInclude Include="src\appdata\enums.h" />
     <ClInclude Include="src\appdata\helpers.h" />
-    <ClInclude Include="src\appdata\cs-types.h" />
     <ClInclude Include="src\appdata\types-helper.h" />
     <ClInclude Include="src\appdata\types.h" />
     <ClInclude Include="src\core\config\config_manager.h" />
@@ -32,7 +32,10 @@
     <ClInclude Include="src\core\rendering\renderer.h" />
     <ClInclude Include="src\core\serializable.h" />
     <ClInclude Include="src\framework.h" />
+    <ClInclude Include="src\memory\asm_resolver.h" />
+    <ClInclude Include="src\memory\function_hook.h" />
     <ClInclude Include="src\memory\hook_manager.h" />
+    <ClInclude Include="src\memory\mem.h" />
     <ClInclude Include="src\pch.h" />
     <ClInclude Include="src\ui\gui.h" />
     <ClInclude Include="src\user\cheat\cheat.h" />
@@ -87,7 +90,9 @@
     <ClCompile Include="src\core\rendering\backend\dx11_backend.cpp" />
     <ClCompile Include="src\core\rendering\renderer.cpp" />
     <ClCompile Include="src\dllmain.cpp" />
+    <ClCompile Include="src\memory\asm_resolver.cpp" />
     <ClCompile Include="src\memory\hook_manager.cpp" />
+    <ClCompile Include="src\memory\mem.cpp" />
     <ClCompile Include="src\pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
